--- a/views/profile.jade
+++ b/views/profile.jade
@@ -35,4 +35,7 @@ block content
       li.user-mentions(data-url="/user/mentions/#{user.id}") Mentions
       li.user-starred(data-url="/user/starred/#{user.id}") Starred
 
+    ol#unread-messages
+      h2
+      ol
     ol.messages(data-userid='#{user.id}')
