hide actions from form when not in use

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -281,6 +281,14 @@ header a#notifications.on:hover {
     padding: 5px 10px;
 }
 
+.form-action-wrapper {
+    display: none;
+}
+
+#overlay .form-action-wrapper {
+    display: block;
+}
+
 ol.messages #paginated {
     background-color: #aaa;
     border: 0;
