--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,8 +5,9 @@ mixin messageForm(cssName, placeholder, message, buttonText)
         textarea(name='text', class='writeable submittable', placeholder='#{placeholder}')= message
         input(type='hidden', name='reply_to', value='', class='reply_to')
         input(type='hidden', name='_csrf', value='#{csrf}')
-        span.counter= charLimit
-        button(type='submit', class='submittable')= buttonText
+        .form-action-wrapper
+          span.counter= charLimit
+          button(type='submit', class='submittable')= buttonText
         ol.suggestions(class='writeable')
 
 !!! 5
