--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,6 +22,8 @@ html
     link(rel='apple-touch-icon', sizes='114x114', href='/images/logo-114.png')
     link(rel='apple-touch-icon', sizes='128x128', href='/images/logo-128.png')
     link(rel='stylesheet', href='/stylesheets/main.css')
+    if analytics
+      != '<script type="text/javascript">var _gaq = _gaq || []; _gaq.push(["_setAccount", "' + analytics + '"]); _gaq.push(["_trackPageview"]); (function() { var ga = document.createElement("script"); ga.type = "text/javascript"; ga.async = true; ga.src = "http://www.google-analytics.com/ga.js"; var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(ga, s); })();</script>'
 
   body(data-url='#{url}', data-username='#{loggedUsername}', data-sessionid='#{loggedInId}', class='#{mediaOn}', data-charlimit='#{charLimit}')
     #hush
