tone down the button - halloween is almost over :D

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -937,7 +937,7 @@ br {
 }
 
 time {
-    background-color: #ffa800;
+    background-color: #adc1c5;
     border-radius: 100px;
     color: #fff;
     float: right;
