--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1288,7 +1288,7 @@ img.hush {
     }
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 600px) {
     #dashboard {
         width: 530px;
     }
@@ -1426,7 +1426,7 @@ img.hush {
     }
 }
 
-@media only screen and (max-width: 560px) and (orientation:portrait) {
+@media only screen and (max-width: 530px) and (orientation:portrait) {
     #dashboard {
         width: 320px;
     }
@@ -1488,8 +1488,8 @@ img.hush {
 
     #overlay .info li {
         margin: 2px;
-        padding: 5px 3px 3px 3px;
-        width: 60px;
+        padding: 3px 8px;
+        width: 69px;
     }
 
     #overlay .info li, #overlay .info li span {
