--- a/views/layout.jade
+++ b/views/layout.jade
@@ -40,6 +40,7 @@ html
     if session
       ol#notifications-preview
         li
+          !='<li><a class="notification-item" href="#" data-postid="1364613" data-username="ednapiranha"><h2>ednapiranha</h2><p>test</p></a></li>'
 
     #dashboard
       a(name='#top')
