--- a/views/profile.jade
+++ b/views/profile.jade
@@ -31,9 +31,9 @@ block content
 
   section
     ol.tabs
-      li.user-posts.selected(data-url="/user/posts/#{user.id}") Recent
-      li.user-mentions(data-url="/user/mentions/#{user.id}") Mentions
-      li.user-starred(data-url="/user/starred/#{user.id}") Starred
+      li.user-posts.selected(data-url='/user/posts/#{user.id}') Recent
+      li.user-mentions(data-url='/user/mentions/#{user.id}') Mentions
+      li.user-starred(data-url='/user/starred/#{user.id}') Starred
 
     ol#unread-messages
       h2
