--- a/views/index.jade
+++ b/views/index.jade
@@ -6,9 +6,9 @@ block content
 
     section
       ol.tabs
-        li.my-feed.selected(data-url='/my/feed') Feed
+        li.my-feed.selected(data-url='/my/feed') My Feed
         li.user-mentions(data-url='/user/mentions/#{session.id}') Mentions
-        li.user-interactions(data-url='/user/interactions/#{session.id}') Interact
+        li.user-interactions(data-url='/user/interactions/#{session.id}') Interactions
         li.global-feed(data-url='/global/feed') Global
 
       ol#unread-messages
