--- a/views/profile.jade
+++ b/views/profile.jade
@@ -31,11 +31,11 @@ block content
 
   section
     ol.tabs
-      li.user-posts.selected(data-url='/user/posts/#{user.id}')
+      li.user-posts.selected(data-url='/user/posts/#{user.id}', tabindex='0')
         a(href='javascript:;', title='Recent') Recent
-      li.user-mentions(data-url='/user/mentions/#{user.id}')
+      li.user-mentions(data-url='/user/mentions/#{user.id}', tabindex='0')
         a(href='javascript:;', title='Mentions') Mentions
-      li.user-starred(data-url='/user/starred/#{user.id}')
+      li.user-starred(data-url='/user/starred/#{user.id}', tabindex='0')
         a(href='javascript:;', title='Starred') Starred
 
     ol#unread-messages
